# ember-memory

./: .gitignore  .mcp.json  FORGE.md  LICENSE  PRIVACY.md  README.md  pyproject.toml  requirements.txt  setup_wizard.py  ui.html
.claude-plugin/: plugin.json
controller/: __init__.py  __main__.py  tray.py
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEMO_VIDEO_SCRIPT.md  REDDIT_LAUNCH_POST.md  TROUBLESHOOTING.md
docs/superpowers/plans/: 2026-03-24-plan1-core-foundation.md  2026-03-24-plan2-backend-arsenal.md  2026-03-24-plan3-ember-engine.md  2026-03-24-plan4-cli-controller-ship.md  2026-03-31-plan5-product-hooks-roadmap.md
docs/superpowers/specs/: 2026-03-24-ember-memory-v2-design.md  2026-03-28-collection-management-features.md  2026-03-31-ember-memory-product-threads.md
ember_memory/: __init__.py  __main__.py  codex_hook.py  config.py  controller_app.py  desktop_integration.py  gemini_hook.py  hook.py  hook_universal.py  ingest.py  monitor.py  server.py  single_instance.py
ember_memory/assets/: __init__.py
ember_memory/backends/: __init__.py  base.py  chromadb_backend.py  loader.py
ember_memory/controller_assets/: __init__.py  ui.css  ui.html  ui.js
ember_memory/core/: __init__.py  bm25.py  namespaces.py  search.py
ember_memory/core/backends/: __init__.py  base.py  chromadb_backend.py  lancedb_backend.py  loader.py  milvus_backend.py  pgvector_backend.py  pinecone_backend.py  qdrant_backend.py  sqlite_vec_backend.py  weaviate_backend.py
ember_memory/core/embeddings/: __init__.py  base.py  google_provider.py  loader.py  model_catalog.py  ollama.py  openai_provider.py  openrouter_provider.py
ember_memory/embeddings/: __init__.py  loader.py
integrations/: __init__.py
integrations/claude_code/: .mcp.json  README.md  __init__.py  hooks.json
integrations/codex/: README.md  __init__.py  hook.py
integrations/gemini_cli/: README.md  __init__.py  hook.py
scripts/: setup.py
tests/: conftest.py  test_backend_base.py  test_backend_chromadb.py  test_backend_lancedb.py  test_backend_milvus.py  test_backend_pgvector.py  test_backend_pinecone.py  test_backend_qdrant.py  test_backend_sqlite_vec.py  test_backend_weaviate.py  test_bm25.py  test_chunking.py  test_claude_hook.py  test_codex_hook.py  test_controller_app.py  test_desktop_integration.py  test_embedding_base.py  test_embedding_google.py  test_embedding_loader.py  test_embedding_model_catalog.py  test_embedding_ollama.py  test_embedding_openai.py  test_embedding_openrouter.py  test_engine_connections.py  test_engine_heat.py  test_engine_scopes.py  test_engine_scoring.py  test_engine_state.py  test_engine_stats.py  test_entrypoint.py  test_gemini_hook.py  test_namespaces.py  test_search.py  test_search_with_engine.py  test_server_v2.py  test_setup_wizard_codex.py  test_single_instance.py  test_tray.py
(+6 files in other folders)
